--- a/CleanArchMvc.Infra.Data/CleanArchMvc.Infra.Data.csproj
+++ b/CleanArchMvc.Infra.Data/CleanArchMvc.Infra.Data.csproj
@@ -1,13 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="EntitiesConfiguration\" />
     <Folder Include="Identity\" />
-    <Folder Include="Repositories\" />
   </ItemGroup>
 
   <ItemGroup>
