--- a/CleanArchMvc.WebUI/appsettings.json
+++ b/CleanArchMvc.WebUI/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": { "DefaultConnection": " server=localhost,1433;database=CleanArchDb;Trusted_Connection=False; TrustServerCertificate=True;User Id=sa;Password=Risos1920#" }
 }
