--- a/CleanArchMvc.WebUI/CleanArchMvc.WebUI.csproj
+++ b/CleanArchMvc.WebUI/CleanArchMvc.WebUI.csproj
@@ -13,4 +13,8 @@
     <ProjectReference Include="..\CleanArchMvc.Infra.Ioc\CleanArchMvc.Infra.Ioc.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
