ProductsController e TokenController criadas.

--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": " server=localhost,1433;database=CleanArchDb;Trusted_Connection=False; TrustServerCertificate=True;User Id=sa;Password=Risos1920#"
+  },
+  "Jwt": {
+    "SecretKey": "#Descubr4@h4h4h4$1920",
+    "Issuer": "risos.dev",
+    "Audience": "http://www.risos.dev"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,6 +14,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": { "DefaultConnection": " server=localhost,1433;database=CleanArchDb;Trusted_Connection=False; TrustServerCertificate=True;User Id=sa;Password=Risos1920#" }
+  "AllowedHosts": "*"
 }
